[gd_scene load_steps=2 format=3 uid="uid://ds12i8yqwxgax"]

[ext_resource type="Script" path="res://src/scenes/mediaWorks.gd" id="1_onj4y"]

[node name="MediaWorks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_onj4y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -15.5
offset_right = 70.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadBIN" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Extract DATA.BIN"

[node name="LoadExBIN" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Extract Compressed Blocks / TIM2 From Extracted .BIN"

[node name="FILELoadBin" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("DATA.BIN")
use_native_dialog = true

[node name="FILELoadExBins" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.BIN")
use_native_dialog = true

[node name="FILELoadFolder" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadBIN" to="." method="_on_load_bin_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadExBIN" to="." method="_on_load_ex_bin_pressed"]
[connection signal="file_selected" from="FILELoadBin" to="." method="_on_file_load_bin_file_selected"]
[connection signal="files_selected" from="FILELoadExBins" to="." method="_on_file_load_ex_bins_files_selected"]
[connection signal="dir_selected" from="FILELoadFolder" to="." method="_on_file_load_folder_dir_selected"]
